KMiPagina/deployment-mipagina.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mipagina-deployment
spec:
  selector:
    matchLabels:
      app: mipagina
  replicas: 1
  template:
    metadata:
      labels:
        app: mipagina
    spec:
      containers:
        - name: mipagina
          image: dquisiest/nginxpersonalizado:0.1
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "120Mi"
              cpu: "500m"
          ports:
          - containerPort: 80
            name: mipagina-port
