KMiPagina/service-mipagina.yml
apiVersion: v1
kind: Service
metadata:
  name: mipagina-service
  labels:
    app: mipagina
spec:
  selector:
    app: mipagina
  type: NodePort
  ports:
    - port: 80
      nodePort: 30080
